--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
-
-<!--include ../common.blocks/education/education__description--><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Adaptive resume template">
     <title>Resume</title>
-  <link href="/resume/./style.css" rel="stylesheet"></head>
-  <body class="body">
+  <link rel="shortcut icon" href="/assets/favicon.ico"><link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png"><link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png"><link rel="icon" type="image/png" sizes="48x48" href="/assets/favicon-48x48.png"><link rel="manifest" href="/assets/manifest.json"><meta name="mobile-web-app-capable" content="yes"><meta name="theme-color" content="#fff"><meta name="application-name" content="resume"><link rel="apple-touch-icon" sizes="57x57" href="/assets/apple-touch-icon-57x57.png"><link rel="apple-touch-icon" sizes="60x60" href="/assets/apple-touch-icon-60x60.png"><link rel="apple-touch-icon" sizes="72x72" href="/assets/apple-touch-icon-72x72.png"><link rel="apple-touch-icon" sizes="76x76" href="/assets/apple-touch-icon-76x76.png"><link rel="apple-touch-icon" sizes="114x114" href="/assets/apple-touch-icon-114x114.png"><link rel="apple-touch-icon" sizes="120x120" href="/assets/apple-touch-icon-120x120.png"><link rel="apple-touch-icon" sizes="144x144" href="/assets/apple-touch-icon-144x144.png"><link rel="apple-touch-icon" sizes="152x152" href="/assets/apple-touch-icon-152x152.png"><link rel="apple-touch-icon" sizes="167x167" href="/assets/apple-touch-icon-167x167.png"><link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon-180x180.png"><link rel="apple-touch-icon" sizes="1024x1024" href="/assets/apple-touch-icon-1024x1024.png"><meta name="apple-mobile-web-app-capable" content="yes"><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"><meta name="apple-mobile-web-app-title" content="resume"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-640x1136.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-750x1334.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-828x1792.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1125x2436.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1242x2208.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1242x2688.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1536x2048.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1668x2224.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1668x2388.png"><link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-2048x2732.png"><link rel="apple-touch-startup-image" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/assets/apple-touch-startup-image-1620x2160.png"><link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-1136x640.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-1334x750.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-1792x828.png"><link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2436x1125.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2208x1242.png"><link rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2688x1242.png"><link rel="apple-touch-startup-image" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2048x1536.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2224x1668.png"><link rel="apple-touch-startup-image" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2388x1668.png"><link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2732x2048.png"><link rel="apple-touch-startup-image" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/assets/apple-touch-startup-image-2160x1620.png"><link rel="icon" type="image/png" sizes="228x228" href="/assets/coast-228x228.png"><meta name="msapplication-TileColor" content="#fff"><meta name="msapplication-TileImage" content="/assets/mstile-144x144.png"><meta name="msapplication-config" content="/assets/browserconfig.xml"><link rel="yandex-tableau-widget" href="/assets/yandex-browser-manifest.json"><link href="./style.css" rel="stylesheet"></head>
+  <body>
     <div class="layout-grid">
-      <div class="section-wrapper section-wrapper_header">
+      <section class="section-wrapper section-wrapper_type_for-header">
         <div class="header__disk">
           <div class="header__disk-inner"></div>
         </div>
-        <div class="header__name"><span class="header__name-here">NAME HERE</span><br><span class="header__surname">SURNAME</span></div>
-        <div class="header__job">GRAPHIC DESIGNER</div>
-      </div>
-      <div class="section-wrapper">
-        <div class="block-header__wrapper"><img class="block-header__icon" src="/resume/images/PROFILE_ICON.png">
+        <div class="header__name"><span class="header__name-here">name here</span><br><span class="header__surname">surname</span></div>
+        <div class="header__job">graphic designer</div>
+      </section>
+      <section class="section-wrapper">
+        <header class="block-header__wrapper"><img class="block-header__icon" src="images/profile-icon.png" alt="profile">
           <div class="block-header__name">profile</div>
           <div class="block-header__line"></div>
-        </div>
+        </header>
 <div class="profile__content"><span>
     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.
     Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -31,36 +31,36 @@
     Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.
     Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.
     Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</span></span></div>
-      </div>
-      <div class="section-wrapper">
-        <div class="block-header__wrapper"><img class="block-header__icon" src="/resume/images/CONTACT_ICON.png">
+      </section>
+      <section class="section-wrapper">
+        <header class="block-header__wrapper"><img class="block-header__icon" src="images/contact-icon.png" alt="contact">
           <div class="block-header__name">contact</div>
           <div class="block-header__line"></div>
-        </div>
-        <div class="contact__table">
-          <div class="contact__tr">
-            <div class="contact__type">address</div>
-            <div class="contact__data">Main Street, City.</div>
-          </div>
-          <div class="contact__tr">
-            <div class="contact__type">e-mail</div>
-            <div class="contact__data">contact@domain.com</div>
-          </div>
-          <div class="contact__tr">
-            <div class="contact__type">phone</div>
-            <div class="contact__data">555-555-555</div>
-          </div>
-          <div class="contact__tr">
-            <div class="contact__type">website</div>
-            <div class="contact__data">www.yourweb.com</div>
-          </div>
-        </div>
-      </div>
-      <div class="section-wrapper section-wrapper_skills">
-        <div class="block-header__wrapper"><img class="block-header__icon" src="/resume/images/SKILLS_ICON.png">
+        </header>
+        <table class="contact__table">
+          <tr class="contact__tr">
+            <td class="contact__type">address</td>
+            <td class="contact__data">Main Street, City.</td>
+          </tr>
+          <tr class="contact__tr">
+            <td class="contact__type">e-mail</td>
+            <td class="contact__data">contact@domain.com</td>
+          </tr>
+          <tr class="contact__tr">
+            <td class="contact__type">phone</td>
+            <td class="contact__data">555-555-555</td>
+          </tr>
+          <tr class="contact__tr">
+            <td class="contact__type">website</td>
+            <td class="contact__data">www.yourweb.com</td>
+          </tr>
+        </table>
+      </section>
+      <section class="section-wrapper section-wrapper_type_for-skills">
+        <header class="block-header__wrapper"><img class="block-header__icon" src="images/skills-icon.png" alt="skills">
           <div class="block-header__name">skills</div>
           <div class="block-header__line"></div>
-        </div>
+        </header>
         <div class="skills__content">
           <div class="skills__name">creative</div>
           <div class="skills__level">
@@ -123,12 +123,12 @@
             <div class="skills__point"></div>
           </div>
         </div>
-      </div>
-      <div class="section-wrapper section-wrapper_width_wide">
-        <div class="block-header__wrapper"><img class="block-header__icon" src="/resume/images/EDUCATION_ICON.png">
+      </section>
+      <section class="section-wrapper section-wrapper_width_wide">
+        <header class="block-header__wrapper"><img class="block-header__icon" src="images/education-icon.png" alt="education">
           <div class="block-header__name">education</div>
           <div class="block-header__line"></div>
-        </div>
+        </header>
         <ul class="education__ul">
           <li class="education__li"><span class="education__degree">master degree</span>
             <span class="education__studying-time">//Feb 2011 - Jun 2014</span>
@@ -151,20 +151,13 @@
             <br>
             <span class="education__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</span>
           </li>
-          <li class="education__li"><span class="education__degree">master degree</span>
-            <span class="education__studying-time">//Feb 2011 - Jun 2014</span>
-            <br>
-            <span class="education__university-name">university name</span>
-            <br>
-            <span class="education__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</span>
-          </li>
         </ul>
-      </div>
-      <div class="section-wrapper section-wrapper_width_wide section-wrapper_experience">
-        <div class="block-header__wrapper"><img class="block-header__icon" src="/resume/images/EXPERIENCE_ICON.png">
+      </section>
+      <section class="section-wrapper section-wrapper_width_wide section-wrapper_type_for-experience">
+        <header class="block-header__wrapper"><img class="block-header__icon" src="images/experience-icon.png" alt="experience">
           <div class="block-header__name">experience</div>
           <div class="block-header__line"></div>
-        </div>
+        </header>
         <ul class="education__ul experience__ul">
           <li class="education__li"><span class="education__degree experience__company-name">company name</span>
             <span class="education__studying-time">//Feb 2011 - Jun 2014</span>
@@ -188,12 +181,12 @@
             <span class="education__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</span>
           </li>
         </ul>
-      </div>
-      <div class="section-wrapper section-wrapper_width_wide section-wrapper_software">
-        <div class="block-header__wrapper"><img class="block-header__icon" src="/resume/images/SOFTWARE_ICON.png">
+      </section>
+      <section class="section-wrapper section-wrapper_width_wide section-wrapper_type_for-software">
+        <header class="block-header__wrapper"><img class="block-header__icon" src="images/software-icon.png" alt="software">
           <div class="block-header__name">software</div>
           <div class="block-header__line"></div>
-        </div>
+        </header>
         <div class="software__content-wrapper">
           <div class="software__item">
             <div class="software__tool">photoshop</div>
@@ -202,37 +195,37 @@
             </div>
           </div>
           <div class="software__item">
-            <div class="software__tool">illustrator</div>
+            <div class="software__tool">photoshop</div>
             <div class="software__scale">
-              <div class="software__level" style="width:70.57761732851986%;"></div>
+              <div class="software__level" style="width:91.15523465703971%;"></div>
             </div>
           </div>
           <div class="software__item">
-            <div class="software__tool">indesign</div>
+            <div class="software__tool">photoshop</div>
             <div class="software__scale">
-              <div class="software__level" style="width:56.317689530685925%;"></div>
+              <div class="software__level" style="width:91.15523465703971%;"></div>
             </div>
           </div>
           <div class="software__item">
-            <div class="software__tool">dreamweaver</div>
+            <div class="software__tool">photoshop</div>
             <div class="software__scale">
-              <div class="software__level" style="width:83.21299638989169%;"></div>
+              <div class="software__level" style="width:91.15523465703971%;"></div>
             </div>
           </div>
           <div class="software__item">
-            <div class="software__tool">after effects</div>
+            <div class="software__tool">photoshop</div>
             <div class="software__scale">
-              <div class="software__level" style="width:61.73285198555957%;"></div>
+              <div class="software__level" style="width:91.15523465703971%;"></div>
             </div>
           </div>
           <div class="software__item">
-            <div class="software__tool">html&amp;css3</div>
+            <div class="software__tool">photoshop</div>
             <div class="software__scale">
               <div class="software__level" style="width:91.15523465703971%;"></div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </div>
-  <script type="text/javascript" src="/resume/main.js"></script></body>
+  <script src="main.js"></script></body>
 </html>
