--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
           </header>
         </div>
         <div class="contact">
-          <table class="contact__table">
-            <tr class="contact-item">
-              <td class="contact-item__type">address</td>
-              <td class="contact-item__data"><span class="contact-item__data-text">Main Street, City.</span>
-              </td>
-            </tr>
-            <tr class="contact-item">
-              <td class="contact-item__type">e-mail</td>
-              <td class="contact-item__data"><a class="contact-item__data-link" href="mailto: contact@domain.com" target="_blank" rel="noopener noreferrer">contact@domain.com</a>
-              </td>
-            </tr>
-            <tr class="contact-item">
-              <td class="contact-item__type">phone</td>
-              <td class="contact-item__data"><a class="contact-item__data-link" href="tel: 555-555-555" target="_blank" rel="noopener noreferrer">555-555-555</a>
-              </td>
-            </tr>
-            <tr class="contact-item">
-              <td class="contact-item__type">website</td>
-              <td class="contact-item__data"><a class="contact-item__data-link" href="http://www.yourweb.com" target="_blank" rel="noopener noreferrer">www.yourweb.com</a>
-              </td>
-            </tr>
-          </table>
+          <div class="contact__table">
+            <div class="contact-item">
+              <div class="contact-item__type">address</div>
+              <div class="contact-item__data"><span class="contact-item__data-text">Main Street, City.</span>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="contact-item__type">e-mail</div>
+              <div class="contact-item__data"><a class="contact-item__data-link" href="mailto: contact@domain.com" target="_blank" rel="noopener noreferrer">contact@domain.com</a>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="contact-item__type">phone</div>
+              <div class="contact-item__data"><a class="contact-item__data-link" href="tel: 555-555-555" target="_blank" rel="noopener noreferrer">555-555-555</a>
+              </div>
+            </div>
+            <div class="contact-item">
+              <div class="contact-item__type">website</div>
+              <div class="contact-item__data"><a class="contact-item__data-link" href="http://www.yourweb.com" target="_blank" rel="noopener noreferrer">www.yourweb.com</a>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="page__section page__section_type_for-skills">
@@ -170,25 +170,25 @@
               <ul class="progress-list">
                 <div class="progress-list__item progress-list__item_type_for-education">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-education">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-education">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-education">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
@@ -208,19 +208,19 @@
               <ul class="progress-list">
                 <div class="progress-list__item progress-list__item_type_for-experience">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-experience">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-experience">
                   <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_#{nameColor}">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
@@ -238,37 +238,37 @@
           <div class="software">
             <div class="software-item">
               <div class="software-item__tool">photoshop</div>
-              <div class="software-item__scale software-item__scale_child-number_first">
+              <div class="software-item__scale">
                 <div class="software-item__level" style="width:91.15523465703971%;"></div>
               </div>
             </div>
             <div class="software-item">
               <div class="software-item__tool">illustrator</div>
-              <div class="software-item__scale software-item__scale_child-number_second">
+              <div class="software-item__scale">
                 <div class="software-item__level" style="width:70.57761732851986%;"></div>
               </div>
             </div>
             <div class="software-item">
               <div class="software-item__tool">indesign</div>
-              <div class="software-item__scale software-item__scale_child-number_third">
+              <div class="software-item__scale">
                 <div class="software-item__level" style="width:56.317689530685925%;"></div>
               </div>
             </div>
             <div class="software-item">
               <div class="software-item__tool">dreamweaver</div>
-              <div class="software-item__scale software-item__scale_child-number_fourth">
+              <div class="software-item__scale">
                 <div class="software-item__level" style="width:83.21299638989169%;"></div>
               </div>
             </div>
             <div class="software-item">
               <div class="software-item__tool">after effects</div>
-              <div class="software-item__scale software-item__scale_child-number_fifth">
+              <div class="software-item__scale">
                 <div class="software-item__level" style="width:61.73285198555957%;"></div>
               </div>
             </div>
             <div class="software-item">
               <div class="software-item__tool">html&amp;css3</div>
-              <div class="software-item__scale software-item__scale_child-number_sixth">
+              <div class="software-item__scale">
                 <div class="software-item__level" style="width:91.15523465703971%;"></div>
               </div>
             </div>
