--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="header__job">graphic designer</div>
         </div>
       </section>
-      <section class="page__section page__section_type_for-profile">
+      <section class="page__section">
         <header class="block-header"><img class="block-header__icon block-header__icon_type_for-profile" src="assets/images/profile-icon.png" alt="profile">
           <div class="block-header__name block-header__name_type_for-profile">profile</div>
           <div class="block-header__line block-header__line_type_for-profile"></div>
@@ -169,26 +169,26 @@
             <div class="education__list">
               <ul class="progress-list">
                 <div class="progress-list__item progress-list__item_type_for-education">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-education">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-education">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-education">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">university name</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_blue">master degree</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">university name</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
@@ -207,20 +207,20 @@
             <div class="experience__list">
               <ul class="progress-list">
                 <div class="progress-list__item progress-list__item_type_for-experience">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">your job here</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-experience">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">your job here</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
                 <div class="progress-list__item progress-list__item_type_for-experience">
-                  <li class="progress-list-item progress-list-item_type_for-undefined">
-                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// Feb 2011 - Jun 2014</span></div><span class="progress-list-item__title">your job here</span>
+                  <li class="progress-list-item">
+                    <div class="progress-list-item__header"><span class="progress-list-item__name progress-list-item__name_color_black">company name</span><span class="progress-list-item__period">// <span class="progress-list-item__period-part">Feb 2011</span> -  <span class="progress-list-item__period-part">Jun 2014</span></span></div><span class="progress-list-item__title">your job here</span>
                     <p class="progress-list-item__description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque.</p>
                   </li>
                 </div>
@@ -229,7 +229,7 @@
           </div>
         </div>
       </section>
-      <section class="page__section page__section_width_wide">
+      <section class="page__section page__section_width_wide page__section_type_for-software">
         <header class="block-header"><img class="block-header__icon block-header__icon_type_for-software" src="assets/images/software-icon.png" alt="software">
           <div class="block-header__name block-header__name_type_for-software">software</div>
           <div class="block-header__line block-header__line_type_for-software"></div>
