--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Adaptive resume template">
+    <meta name="keywords" content="Resume, Template, Adaptive layout">
     <link rel="apple-touch-icon" sizes="144x144" href="assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
@@ -14,7 +15,7 @@
     <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
     <title>Resume</title>
-  <link href="style.css" rel="stylesheet"></head>
+  <link href="index.css" rel="stylesheet"></head>
   <body>
     <div class="page">
       <section class="page__section page__section_type_for-header">
@@ -243,27 +244,27 @@
               </div>
             </div>
             <div class="software-item">
-              <div class="software-item__tool">illustrator</div>
-              <div class="software-item__scale">
-                <div class="software-item__level" style="width:70.57761732851986%;"></div>
-              </div>
-            </div>
-            <div class="software-item">
-              <div class="software-item__tool">indesign</div>
-              <div class="software-item__scale">
-                <div class="software-item__level" style="width:56.317689530685925%;"></div>
-              </div>
-            </div>
-            <div class="software-item">
               <div class="software-item__tool">dreamweaver</div>
               <div class="software-item__scale">
                 <div class="software-item__level" style="width:83.21299638989169%;"></div>
               </div>
             </div>
             <div class="software-item">
+              <div class="software-item__tool">illustrator</div>
+              <div class="software-item__scale">
+                <div class="software-item__level" style="width:70.57761732851986%;"></div>
+              </div>
+            </div>
+            <div class="software-item">
               <div class="software-item__tool">after effects</div>
               <div class="software-item__scale">
                 <div class="software-item__level" style="width:61.73285198555957%;"></div>
+              </div>
+            </div>
+            <div class="software-item">
+              <div class="software-item__tool">indesign</div>
+              <div class="software-item__scale">
+                <div class="software-item__level" style="width:56.317689530685925%;"></div>
               </div>
             </div>
             <div class="software-item">
@@ -276,5 +277,5 @@
         </div>
       </section>
     </div>
-  <script src="main.js"></script></body>
+  <script src="index.js"></script></body>
 </html>
